# libmp3tag

./: CLAUDE.md  CMakeLists.txt  README.md  build_xcframework.sh
include/mp3tag/: module.modulemap  mp3tag.h  mp3tag_error.h  mp3tag_types.h
src/: mp3tag.c
src/container/: container.c  container.h
src/id3v1/: id3v1.c  id3v1.h
src/id3v2/: id3v2_defs.h  id3v2_reader.c  id3v2_reader.h  id3v2_writer.c  id3v2_writer.h
src/io/: file_io.c  file_io.h
src/util/: buffer.c  buffer.h  string_util.c  string_util.h
tests/: CMakeLists.txt  test_mp3tag.c
